--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     const timestampContainer = document.getElementById('timestamp');
 
     //Define BLE Device Specs
-    var deviceName ='ESP32';
+    var deviceName ='ESP32-Januar';
     var bleService = 'c0fbfe47-def8-4a4e-b5d6-1eadcf675784';
     var ledCharacteristic = 'c0fbfe48-def8-4a4e-b5d6-1eadcf675784';
     var sensorCharacteristic= 'c0fbfe49-def8-4a4e-b5d6-1eadcf675784';
